# discretepiece

./: .gitignore  CMakeLists.txt  README.md  discretepiece.pc.in
python/: build_bundled.sh  setup.py
python/src/discretepiece/: __init__.py  spm_client.h  spm_client.i  spm_client_wrap.cxx
src/: CMakeLists.txt  bpe_model.cc  bpe_model.h  bpe_model_trainer.cc  bpe_model_trainer.h  common.h  discretepiece_model.proto  discretepiece_processor.cc  discretepiece_processor.h  discretepiece_trainer.cc  discretepiece_trainer.h  error.cc  filesystem.cc  filesystem.h  freelist.h  init.h  io_utils.cc  io_utils.h  model_factory.cc  model_factory.h  model_interface.cc  model_interface.h  spec_parser.h  spm_compatible_converter.cc  spm_encode_main.cc  spm_train_main.cc  trainer_factory.cc  trainer_factory.h  trainer_interface.cc  trainer_interface.h  util.cc  util.h
src/builtin_pb/: discretepiece_model.pb.cc  discretepiece_model.pb.h
src/kaldiio/kaldiio/: kaldi-table.h
